--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "Fend": "npm run dev --prefix Frontend",
     "Bend": "nodemon Backend/src/server.mjs",
     "start": "concurrently \"npm run Bend\" \"npm run Fend\"",
-    "cleanData": "node Backend/scripts/cleanData.mjs"
+    "cleanData": "node Backend/scripts/cleanData.mjs",
+    "build": "npm install && npm install --prefix Fend && npm run build --prefix Fend"
+
   },
   "author": "",
   "license": "ISC",
