--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-.env
-node_modules
+node_modules/
 dist
 dist-ssr
 *.local
@@ -23,4 +22,5 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-
+node_modules
+.env
